--- a/force-app/main/default/aura/AccountSettings/AccountSettings.css
+++ b/force-app/main/default/aura/AccountSettings/AccountSettings.css
@@ -26,6 +26,9 @@
     margin-top: 10px;
 }
 
+.THIS .as-info > .rr-form-element{
+    margin-top: 20px;
+}
 
 .THIS.as-container .as-privacy{
     margin-top: 20px;
