--- a/force-app/main/default/layouts/SurveyInvitation-Survey Invitation Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/SurveyInvitation-Survey Invitation Layout.layout-meta.xml
@@ -50,6 +50,10 @@
                 <behavior>Edit</behavior>
                 <field>Survey__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Reminder_Schedule__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns/>
         <style>TwoColumnsLeftToRight</style>
@@ -77,6 +81,8 @@
         <customLabel>false</customLabel>
         <detailHeading>false</detailHeading>
         <editHeading>false</editHeading>
+        <layoutColumns/>
+        <layoutColumns/>
         <layoutColumns/>
         <style>CustomLinks</style>
     </layoutSections>
