--- a/force-app/main/default/layouts/Trial_Survey__c-Trial Survey Layout Days.layout-meta.xml
+++ b/force-app/main/default/layouts/Trial_Survey__c-Trial Survey Layout Days.layout-meta.xml
@@ -23,9 +23,25 @@
                 <behavior>Edit</behavior>
                 <field>Expires_After_Days__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Reminder_Schedule__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Required</behavior>
+                <field>Whose_response_needed__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns/>
         <style>TwoColumnsTopToBottom</style>
+    </layoutSections>
+    <layoutSections>
+        <customLabel>true</customLabel>
+        <detailHeading>true</detailHeading>
+        <editHeading>true</editHeading>
+        <label>Email Reminders Setup</label>
+        <layoutColumns/>
+        <style>OneColumn</style>
     </layoutSections>
     <layoutSections>
         <customLabel>true</customLabel>
