--- a/force-app/main/default/aura/RRIconSplitter/RRIconSplitter.cmp
+++ b/force-app/main/default/aura/RRIconSplitter/RRIconSplitter.cmp
@@ -8,7 +8,7 @@
     <aura:attribute name="value" type="String"/>
     <aura:attribute name="class" type="String" description="CSS classname for the SVG element"/>
     <aura:attribute name="hideMoreThan3" type="Boolean" default="false"/>
-    <aura:attribute name="icons" type="List" access="private"/>
+    <aura:attribute name="icons" type="List" access="public"/>
 
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
 
