--- a/force-app/main/default/aura/RRIconSplitter/RRIconSplitter.cmp
+++ b/force-app/main/default/aura/RRIconSplitter/RRIconSplitter.cmp
@@ -7,16 +7,16 @@
     <!--attributes-->
     <aura:attribute name="value" type="String"/>
     <aura:attribute name="class" type="String" description="CSS classname for the SVG element"/>
-    <aura:attribute name="hideMoreThan3" type="Boolean" default="false"/>
+    <aura:attribute name="numOfIconsToDisplay" type="Integer" default="0"/>
     <aura:attribute name="icons" type="List" access="private"/>
 
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
 
     <div class="icons">
         <aura:iteration items="{!v.icons}" var="icon">
-            <c:RRIcon iconName="{!icon}" class="{!'icon-item ' + v.class}"/>
+            <c:RRIcon iconName="{!icon}" class="{!'icon-item ' + v.class}" color="black"/>
         </aura:iteration>
-        <aura:if isTrue="{!v.hideMoreThan3}">
+        <aura:if isTrue="{!v.numOfIconsToDisplay != 0}">
             <div class="dots">...</div>
         </aura:if>
     </div>
