--- a/force-app/main/default/aura/StudyDetailView/StudyDetailView.cmp
+++ b/force-app/main/default/aura/StudyDetailView/StudyDetailView.cmp
@@ -27,6 +27,7 @@
     <!--change-->
     <aura:attribute name="resourceImagePath" type="String" access="private"/>
     <aura:attribute name="resourceMode" type="String" default="Default"/>
+    <aura:attribute name="visitMode" type="String" default="Current"/>
     <aura:attribute name="taskMode" type="String" default="Open"/>
     <aura:attribute name="isShare" type="Boolean"/>
     <aura:attribute type="String" name="shareMessage"/>
@@ -149,6 +150,15 @@
                         </aura:if>
                     </div>
 
+                    <div class="{!'links rr-width-limiter side-padding' + if(v.currentTab == 'tab-visits', '', ' collapsed')}">
+                        <button id="changeVisitMode" data-visit-mode="Current"
+                                class="{!'apollo-btn text ' + if(v.visitMode == 'Current', ' current', '')}"
+                                onclick="{!c.doAction}">{!$Label.c.Home_Page_StudyVisit_Tab_Study_Visits}</button>
+                        <button id="changeVisitMode" data-visit-mode="Past"
+                                class="{!'apollo-btn text ' + if(v.visitMode == 'Past', ' current', '')}"
+                                onclick="{!c.doAction}">{!$Label.c.Home_Page_StudyVisit_Tab_Past_Visits}</button>
+                    </div>
+
                     <div class="{!'links rr-width-limiter side-padding' + if(v.currentTab == 'tab-tasks', '', ' collapsed')}">
                         <button id="changeTaskMode" data-task-mode="Open" value="Pending"
                                 class="{!'apollo-btn text ' + if(v.taskMode == 'Open', ' current', '')}"
@@ -224,7 +234,7 @@
                     </aura:if>
 
                     <aura:if isTrue="{!v.currentTab == 'tab-visits'}">
-                        <c:StudyVisits/>
+                        <c:StudyVisits visitMode="{!v.visitMode}"/>
                     </aura:if>
 
                     <aura:if isTrue="{!v.currentTab == 'tab-tasks'}">
