--- a/force-app/main/default/aura/StudyVisitsLegend/StudyVisitsLegend.css
+++ b/force-app/main/default/aura/StudyVisitsLegend/StudyVisitsLegend.css
@@ -13,33 +13,52 @@
     padding-left: 23px;
 }
 
-.THIS .svl-table tr{
-    vertical-align: top;
+.THIS .svl-table {
+    min-width: 200px;
 }
 
-.THIS .svl-table td{
-    border-bottom: none;
-    padding-top: 10px;
-    padding-bottom: 10px;
+@media screen and (max-width: 500px){
+    .THIS .svl-row {
+        display: block !important;
+    }
+    .THIS .svl-desc{
+        padding-left: 0 !important;
+        padding-top: 10px;
+    }
+}
+
+.THIS .svl-row {
+    display: flex;
+    padding-bottom: 20px;
+    align-items: center;
+}
+
+.THIS .svl-icon-label {
+    align-items: center;
+    display: flex;
 }
 
 .THIS .svl-icon{
     display: flex;
     height: 32px;
     width: 32px;
+    min-width: 32px;
     justify-content: center;
 }
 
 .THIS .svl-label {
     padding-left:22px;
     font-weight: bold;
-    min-width: 120px;
-    max-width: 120px;
+    min-width: 180px;
+    max-width: 180px;
+    font-size: 13px;
 }
 
 .THIS .svl-desc{
     min-width: 100px;
-    width: 930px;
     padding-left: 15px;
     padding-right: 10px;
+    font-size: 13px;
+    color: #333333;
+    text-align: justify;
 }
