--- a/force-app/main/default/layouts/Participant_Study_Enrollment__c-Participant Study Enrollment Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Participant_Study_Enrollment__c-Participant Study Enrollment Layout.layout-meta.xml
@@ -31,6 +31,18 @@
                 <behavior>Readonly</behavior>
                 <field>External_Key__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Screening_ID__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Readonly</behavior>
+                <field>Study_ID__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>IsSubjectIDverifiedInSDH_c__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
