--- a/force-app/main/default/aura/StudyVisits/StudyVisits.cmp
+++ b/force-app/main/default/aura/StudyVisits/StudyVisits.cmp
@@ -45,17 +45,24 @@
                             <td class="sv-t-name">{!visitWrapper.name}</td>
                             <td class="sv-t-time">{!visitWrapper.timeplane}</td>
                             <td class="{!visitWrapper.isAdhoc ? 'invisible' : 'sv-t-icons'}">
-                                <c:RRIconSplitter numOfIconsToDisplay="5" class="svl-icon" value="{!visitWrapper.icons}"/>
+                                <c:RRIconSplitter numOfIconsToDisplay="5" class="svl-icon"
+                                                  value="{!visitWrapper.icons}"/>
                             </td>
                             <td class="{!visitWrapper.isAdhoc ? 'sv-t-icons' : 'invisible'}">{!$Label.c.StudyVisit_Unscheduled_Visit}</td>
                             <td class="{!v.visitMode == v.visitModeCurrent ? 'sv-t-status' : 'invisible'}">{!visitWrapper.status}</td>
-                            <td class="{!v.visitMode == v.visitModeCurrent ? 'sv-t-reminder' : 'invisible'}" onclick="{!c.createEditTask}">{!visitWrapper.task == null ? 'Create' : 'Temporary'}</td>
+                            <td class="{!v.visitMode == v.visitModeCurrent ? 'sv-t-reminder' : 'invisible'}"
+                                data-visit-id="{!visitWrapper.visit.Id}"
+                                data-task-id="{!visitWrapper.task.Id}"
+                                onclick="{!c.createEditTask}">
+                                {!visitWrapper.task == null ? 'Create' : visitWrapper.reminderDate}
+                            </td>
                             <td class="{!v.visitMode == v.visitModeCurrent ? 'invisible' : 'sv-t-completed-date'}">{!visitWrapper.completedDate}</td>
                         </tr>
                     </aura:iteration>
                 </c:RRTable>
                 <div class="pagination">
-                    <c:rrPagination allObjects="{!v.visitWrappers}" currentObjects="{!v.currentVisits}" entriesOnPage="4"/>
+                    <c:rrPagination allObjects="{!v.visitWrappers}" currentObjects="{!v.currentVisits}"
+                                    entriesOnPage="4"/>
                 </div>
             </aura:if>
             <c:EmptyListStub targetList="{!v.visitWrappers}" iconName="none"/>
